2017-06-06 Release 4.2
	- fixed bug with disabling SSL checks via requests library
	
2017-06-05 Release 4.1
	- support JSON input (list of rows)
	- add fill_data filter to fill empty cells from previous rows
	- use MIME type and extension where available to help choose type
	- grab character encoding from HTTP response if available
	- add verify_ssl parameter to hxl.io.data, hxl.io.make_input,
  	  etc. Defaults to True; if False, don't try to validate SSL certs
	- add new "is (not)" operator for row queries
	- add optional date_format parameter for clean data filter
	- fix bug with error messages from scripts
	- fix output bug in command-line scripts
	- fix bug in merge filter
	- fix bug in hxl.io.tagger

2016-12-02 Release 4.0
	- Fully modularised JSON specs and recipes.
	- Made JSON specs and recipes work recursively.
	- Fix bug that caused select filter to fail after explode filter
	- Added top-level hxl.tagger() function, similar to hxl.data()
	- add optional default_header arg to hxl.model.Column.parse_spec
	- major overhaul of the merge_data filter: now merges *all* columns
	  matching the pattern supplied, and doesn't create an empty
	  column if there are no matching columns in the merge dataset
	- refactored append filter to allow multiple append files in
	  single filter

2016-10-17 Release 3.3
	- Regex ~ and !~ operators in row queries now match anywhere in the cell
	- make row query smart about date comparisons with #date hashtag
	- block numeric/date conversion in row queries for ~ and !~

2016-08-30 Release 3.2
	- add timeout option for opening URLs (avoids long wait in unit
	  tests)
	- encoding fixes for Python2
	- add HXLColumn.has_attribute() method
	- add an optional parsed attribute to HXLRow.get() to try parsing
	  the value according to attributes (currently supports +list)
	- add experimental support for the +list attribute

2016-07-28 Release 3.1
	- change request handling to work better with requests_cache (no